minor bug fixes

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-langchain>=0.1.0
-langchain-openai>=0.0.8
+# Prefer installing via pyproject.toml; this file mirrors runtime deps only
+langgraph>=0.1.0
+langchain-openai>=0.1.0
+langchain-core>=0.1.0
+langchain-community>=0.2.0
 openai>=1.0.0
-pytest 
-langgraph 
+python-dotenv>=1.0.0
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+rich>=13.0.0
+langchain-tavily>=0.1.0
