--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,16 @@ readme = "README.md"
 requires-python = ">=3.9"
 
 dependencies = [
-  "langgraph>=0.0.30",
+  "langgraph>=0.1.0",
   "langchain-openai>=0.1.0",
   "langchain-core>=0.1.0",
+  "langchain-community>=0.2.0",
+  "openai>=1.0.0",
+  "python-dotenv>=1.0.0",
+  "requests>=2.31.0",
+  "beautifulsoup4>=4.12.0",
+  "rich>=13.0.0",
+  "langchain-tavily>=0.1.0",
 ]
 
 [tool.setuptools.packages.find]
@@ -25,3 +32,6 @@ dev = [
   "black",
   "ruff",
 ]
+
+[project.scripts]
+futedu-agent = "agent_logic.agent:main"
