--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,103 @@
-# Prefer installing via pyproject.toml; this file mirrors runtime deps only
-langgraph>=0.1.0
-langchain-openai>=0.1.0
-langchain-core>=0.1.0
-langchain-community>=0.2.0
-openai>=1.0.0
-python-dotenv>=1.0.0
-requests>=2.31.0
-beautifulsoup4>=4.12.0
-rich>=13.0.0
-langchain-tavily>=0.1.0
-pydantic>=2.0.0
-streamlit>=1.28.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.14
+aiosignal==1.4.0
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
+beautifulsoup4==4.13.4
+blinker==1.9.0
+cachetools==6.2.0
+certifi==2025.7.14
+charset-normalizer==3.4.2
+click==8.2.1
+dataclasses-json==0.6.7
+distro==1.9.0
+fastapi==0.116.1
+frozenlist==1.7.0
+gitdb==4.0.12
+GitPython==3.1.45
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.1
+idna==3.10
+iniconfig==2.1.0
+Jinja2==3.1.6
+jiter==0.10.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.25.1
+jsonschema-specifications==2025.4.1
+langchain==0.3.26
+langchain-community==0.3.27
+langchain-core==0.3.68
+langchain-openai==0.3.28
+langchain-tavily==0.2.8
+langchain-text-splitters==0.3.8
+langgraph==0.5.3
+langgraph-checkpoint==2.1.0
+langgraph-prebuilt==0.5.2
+langgraph-sdk==0.1.73
+langsmith==0.4.5
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+mdurl==0.1.2
+multidict==6.6.3
+mypy_extensions==1.1.0
+narwhals==2.2.0
+numpy==2.3.1
+openai==1.95.1
+orjson==3.10.18
+ormsgpack==1.10.0
+packaging==24.2
+pandas==2.3.2
+pillow==11.3.0
+pluggy==1.6.0
+propcache==0.3.2
+protobuf==6.32.0
+pyarrow==21.0.0
+pydantic==2.11.7
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+pydeck==0.9.1
+Pygments==2.19.2
+pytest==8.4.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+pytz==2025.2
+PyYAML==6.0.2
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.4
+requests-toolbelt==1.0.0
+rich==14.0.0
+rpds-py==0.27.1
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+soupsieve==2.7
+SQLAlchemy==2.0.41
+starlette==0.47.3
+streamlit==1.49.1
+tenacity==9.1.2
+tiktoken==0.9.0
+toml==0.10.2
+tornado==6.5.2
+tqdm==4.67.1
+typing-inspect==0.9.0
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+tzdata==2025.2
+urllib3==2.5.0
+uvicorn==0.35.0
+uvloop==0.21.0
+watchfiles==1.1.0
+websockets==15.0.1
+xxhash==3.5.0
+yarl==1.20.1
+zstandard==0.23.0
+
+gunicorn
